HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
24-Jun-2004
   Problems fixed:
       1. bug #978770 Clicking on a button outside of a form is now supported

23-Jun-2004
   Problems fixed:
       1. bug #974380 When using a DNS listener, host header no longer includes ':-1' if the port is not specified

22-Jun-2004
   Problems fixed:
       1. bug #964940 The Referer header was not being sent again if the original request was redirected

21-Jun-2004
   Problems fixed:
       1. bug #974675 Javascript function Window.open did not honor "_self" tag for window name.

18-Jun-2004
   Additions:
       1. Enhanced http logging to show target server, request header line, and received URL

15-Jun-2004
   Thanks to Phil Zampino for finding a fixing a problem in PseudoServer's handling of very long requests.

   Problems fixed:
        1. PseudoServer would hang when sent a very long request.

13-Jun-2004
   Problems fixed:
        1. bug #737167: Nested frame names are now as specified, previous included names of parent frames.
        2. Return from a request that wrote to a new frame is now the result of that request, was the original page.
        3. Return from a request specifying an unknown frame now opens a new window; previously created a subframe
           in the requesting window.

 3-Jun-2004
   Additions:
        1. WebForm now supports the newUnvalidatedRequest method, which should be used in preference to